compiler-tests/src/test/data/diagnostic/NonDataClass.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

class <!REDACTED_ERROR!>NonDataClass<!>(@Redacted val a: Int)
